# rpa_snap_locate

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml
config/: config_manager.py  system.yaml
core/: action_executor.py  change_validator.py  locator_protocol.py  perception_provider.py
core/locators/: __init__.py  fixed_locator.py  llm_locator.py  template_locator.py
data/: data_manager.py
docs/: ARCHITECTURE.md  COMMAND_SERIES.md  design02.md
docs/design/: cleanup_plan.md  design00.md  design01.md  design02.md  design03.md  discuss.md  evolution_notes.md
engine/: hotkey_registry.py  input_event_recorder.py  pipeline_runner.py  recorder_engine.py  step_builder.py  timeline_scheduler.py  workflow_validator.py
examples/: series.template.ps1  series.template.sh
examples/atoms/: run-command.ps1  run-rpa.ps1  start-app.ps1  wait.ps1
examples/series/: edge-ds-workflow.ps1  mouse-keyboard.example.ps1  positron-open-folder.ps1
series/: mouse-keyboard.example.ps1
series/atoms/: paste.ps1  send-keys.ps1  wait-stable.ps1
series/mine/: edge-ds-workflow.ps1
tests/: test_action_executor.py  test_data_manager.py  test_input_event_recorder.py  test_pipeline_runner.py  test_recorder_engine.py  test_timeline_scheduler.py  test_workflow_validator.py
utils/: dpi_calculator.py  hash_calculator.py  image_entropy_calculator.py  logger_setup.py
